Added PAT token variable to Github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,8 @@ jobs:
         run: |
           git tag -f Pre-release
           git push -f origin Pre-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Create Release
         uses: ncipollo/release-action@v1
