--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build NFC Card Generator executable
         run: |
           pip install pyinstaller
-          pyinstaller nfc-card-generator.py --onefile --noconsole
+          pyinstaller nfc-card-generator.py --onefile --noconsole --add-data "templates;templates"
         working-directory: NFC-Card-Generator
 
       - name: Copy templates folder to dist
