Added application icon to artifact build in Github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,13 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build NFC Card Generator executable
-        run: |
-          pip install pyinstaller
-          pyinstaller nfc-card-generator.py --onefile --noconsole --add-data "templates;templates" --icon ../assets/icon.ico
+        run: >
+          PyInstaller nfc-card-generator.py
+            --onefile
+            --noconsole
+            --icon app.ico
+            --add-data "templates;templates"
+            --add-data "icon.png;."
         working-directory: NFC-Card-Generator
 
       - name: Upload NFC-Card-Generator artifact
