--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,12 @@ jobs:
 
       - name: Build NFC Card Generator executable
         run: |
-          pyinstaller nfc-card-generator.py `
+          pyinstaller --clean nfc-card-generator.py `
             --onefile `
             --noconsole `
-            --icon icon.ico `
-            --add-data "icon.png;." `
-            --add-data "templates;templates"
+            --icon "../assets/icon.ico" `
+            --add-data "../assets/icon.png;." `
+            --add-data "../assets/templates;templates"
         working-directory: NFC-Card-Generator
 
       - name: Upload NFC-Card-Generator artifact
