--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload NFC-Card-Generator artifact
         uses: actions/upload-artifact@v6
         with:
-          name: NFC-Card-Generator
+          name: NFC-Card-Generator-Windows-x86_64
           path: NFC-Card-Generator/dist
 
   release:
