--- a/.github/ISSUE_TEMPLATE/question-report.yml
+++ b/.github/ISSUE_TEMPLATE/question-report.yml
@@ -10,7 +10,7 @@ body:
   - type: dropdown
     id: functionality
     attributes:
-      label: Describe the functionality
+      label: Select the functionality
       description: What functionality are you experiencing the issue with?
       options:
         - GUI
