--- a/.github/ISSUE_TEMPLATE/question-report.yml
+++ b/.github/ISSUE_TEMPLATE/question-report.yml
@@ -11,7 +11,7 @@ body:
     id: functionality
     attributes:
       label: Select the functionality
-      description: What functionality are you experiencing the issue with?
+      description: What functionality do you have a question about?
       options:
         - GUI
         - Templates
